# minekraf

./: .gitignore  CMakeLists.txt  README.md  configure  configure.bat
cmake/: init.cmake
cmake/git/: pre-commit.in
doc/: plan.md
lib/: .gitignore  CMakeLists.txt
lib/cmake/imgui/: CMakeLists.txt.in
lib/cmake/imgui-dl/: CMakeLists.txt.in
lib/cmake/sdl3-dl/: CMakeLists.txt.in
lib/cmake/spdlog-dl/: CMakeLists.txt.in
script/: generate_compile_commands.py
src/: CMakeLists.txt  main.cpp  version.h  version.h.in
src/core/: CMakeLists.txt  app.cpp  app.h  eventqueue.cpp  eventqueue.h
src/core/logger/: CMakeLists.txt  logger.cpp  logger.h  loglevel.cpp  loglevel.h
src/core/window/: CMakeLists.txt  windowmanager.h  windowmanager_enums.cpp  windowmanager_enums.h
src/core/window/impl/: windowmanager_sdl3.cpp  windowmanager_sdl3.h
